Form text and number validation added

--- a/index.html
+++ b/index.html
@@ -200,9 +200,11 @@
             </section>
             <section id="navigation">
                 <div class="form-group">
-                    <button class="btn btn-primary hide" id="prev-btn" onclick="navigateTabs('prev')">Previous</button>
-                    <button class="btn btn-primary" id="next-btn" onclick="navigateTabs('next');">Next</button>
-                    <button class="btn btn-primary hide" id="submit-btn" onclick="">Submit</button>
+                    <button type="button" class="btn btn-primary hide" id="prev-btn"
+                        onclick="navigateTabs('prev')">Previous</button>
+                    <button type="button" class="btn btn-primary" id="next-btn"
+                        onclick="navigateTabs('next');">Next</button>
+                    <button type="button" class="btn btn-primary hide" id="submit-btn" onclick="">Submit</button>
                 </div>
             </section>
             <section id="progress-indicator">
