--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         onclick="navigateTabs('prev')">Previous</button>
                     <button type="button" class="btn btn-primary" id="next-btn"
                         onclick="navigateTabs('next');">Next</button>
-                    <button type="button" class="btn btn-primary hide" id="submit-btn" onclick="">Submit</button>
+                    <button type="submit" class="btn btn-primary hide" id="submit-btn">Submit</button>
                 </div>
             </section>
             <section id="progress-indicator">
