--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                 </div>
             </section>
             <section id="summary-tab" class="hide"></section>
+
             <section id="navigation">
                 <div class="form-group">
                     <button type="button" class="btn btn-primary hide" id="prev-btn"
@@ -202,14 +203,7 @@
                     <button type="submit" class="btn btn-primary hide" id="submit-btn">Submit</button>
                 </div>
             </section>
-            <section id="progress-indicator" class="d-block">
-                <span class="tab"></span>
-                <span class="tab"></span>
-                <span class="tab"></span>
-                <span class="tab"></span>
-                <span class="tab"></span>
-                <span class="tab"></span>
-            </section>
+            <section id="progress-indicator"></section>
         </form>
     </main>
 
